--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,7 @@ jobs:
     steps:
       - name: Setup short name
         run: echo "SHORT_NAME=$(echo ${{ matrix.package_short }} | rev | cut -d'/' -f1 | rev)" >> $GITHUB_ENV
-      - if: ${{ (env.SHORT_NAME == 'folder') || (env.SHORT_NAME == 'action') }}
+      - if: ${{ (env.SHORT_NAME != 'folder') && (env.SHORT_NAME != 'action') }}
         run: exit 1
       - uses: hashicorp/setup-terraform@v3
         with:
