--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,15 @@
 name: Continuous Integration
 on:
   pull_request:
+  workflow_dispatch:
+    inputs:
+      PR_NUMBER:
+        description: 'PR number'
+        required: false
+        default: ''
+  push:
+    branches:
+      - main
 
 env:
   GO_VERSION: "1.22.0"
@@ -159,15 +168,14 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           pattern: 'coverage-*'
-          path: 'coverage'
+          path: 'coverage-artifacts'
       - name: Merge coverage reports
         run: |
-          ls -la
-          ls -la coverage
           mkdir -p coverage
-          go tool covdata merge -i=coverage -o coverage/coverage.merged
-          go tool cover -html=coverage/coverage.merged -o coverage/coverage.html
-          go tool cover -func=coverage/coverage.merged > coverage/coverage.txt
+          find coverage-artifacts -type f -name '*' -exec cp {} coverage/ \;
+          go tool covdata merge -i=coverage -o coverage.merged
+          go tool cover -html=coverage.merged -o coverage/coverage.html
+          go tool cover -func=coverage.merged > coverage.txt
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
         with:
@@ -176,3 +184,39 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           path: 'coverage/coverage.txt'
+      - name: Get PR_NUMBER
+        id: pr-number
+        run: |
+          if [ ! -z ${{ inputs.PR_NUMBER }} ]; then
+            echo "PR_NUMBER=${{ inputs.PR_NUMBER }}" >> $GITHUB_OUTPUT
+          elif [ ! -z ${{ github.event.pull_request.number }} ]; then
+            echo "PR_NUMBER=${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
+          else
+            echo "PR_NUMBER=0" >> $GITHUB_OUTPUT
+          fi
+      - name: Set repo code coverage percentage by the percentage of statements covered in the tests
+        id: set-stmts-coverage
+        run: |
+          stmts=$(grep "total:" coverage.txt | awk '{print $3}' | sed 's/%//')
+          if [ -z "$stmts" ]; then
+            echo "STMTS_COVERAGE=0" >> $GITHUB_OUTPUT
+          else
+            echo "STMTS_COVERAGE=$stmts" >> $GITHUB_OUTPUT
+          fi
+      - name: Comment PR with code coverage summary
+        uses: actions/github-script@v7
+        env:
+          CODE_COVERAGE_ARTIFACT_URL: ${{ steps.upload-coverage.outputs.artifact-url }}
+          PR_NUMBER: ${{ steps.pr-number.outputs.PR_NUMBER }}
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const output = `#### Code Coverage Artifact 📈: ${{ env.CODE_COVERAGE_ARTIFACT_URL }}
+            #### Code Coverage Total Percentage: \`${{ steps.set-stmts-coverage.outputs.STMTS_COVERAGE }}%\``;
+
+            github.rest.issues.createComment({
+              issue_number: ${{ env.PR_NUMBER }},
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            }) 
