--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,6 @@
 name: Continuous Integration
 on:
   pull_request:
-  workflow_dispatch:
-    inputs:
-      PR_NUMBER:
-        description: 'PR number'
-        required: false
-        default: ''
   push:
     branches:
       - main
@@ -219,4 +213,55 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: output
-            }) 
+            })
+      - name: Get current repo coverage percentage from Port
+        uses: port-labs/port-github-action@v1
+        id: get-current-coverage
+        with:
+          clientId: ${{ secrets.PORT_CLIENT_ID }}
+          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
+          baseUrl: https://api.getport.io
+          operation: GET
+          identifier: terraform-provider-port-labs
+          blueprint: repository
+      - name: Set current code coverage
+        id: set-current-coverage
+        run: echo "CURRENT_COVERAGE=${{ fromJson(steps.get-current-coverage.outputs.entity).properties.coverage_percent }}" >> $GITHUB_OUTPUT
+
+      - name: Comment if Coverage Regression
+        if: ${{ (fromJson(steps.set-stmts-coverage.outputs.STMTS_COVERAGE) < fromJson(steps.set-current-coverage.outputs.CURRENT_COVERAGE)) && (steps.pr-number.outputs.PR_NUMBER != 0) }}
+        uses: actions/github-script@v7
+        env:
+          PR_NUMBER: ${{ steps.pr-number.outputs.PR_NUMBER }}
+          CURRENT_COVERAGE: ${{ steps.set-current-coverage.outputs.CURRENT_COVERAGE }}
+          NEW_COVERAGE: ${{ steps.set-stmts-coverage.outputs.STMTS_COVERAGE }}
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const output = `🚨 The new code coverage percentage is lower than the current one. Current coverage: \`${{ env.CURRENT_COVERAGE }}\`\n While the new one is: \`${{ env.NEW_COVERAGE }}\``;
+
+            github.rest.issues.createComment({
+              issue_number: ${{ env.PR_NUMBER }},
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
+
+      - name: Fail PR if current code coverage percentage is higher than the new one
+        if: ${{ (fromJson(steps.set-stmts-coverage.outputs.STMTS_COVERAGE) < fromJson(steps.set-current-coverage.outputs.CURRENT_COVERAGE)) && (vars.CODE_COVERAGE_ENFORCEMENT == 'true') }}
+        run: exit 1
+
+      - name: Update service code coverage percentage in Port
+        if: ${{ (github.event_name == 'push') && (fromJson(steps.set-stmts-coverage.outputs.STMTS_COVERAGE) > fromJson(steps.set-current-coverage.outputs.CURRENT_COVERAGE)) }}
+        uses: port-labs/port-github-action@v1
+        with:
+          clientId: ${{ secrets.PORT_CLIENT_ID }}
+          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
+          baseUrl: https://api.getport.io
+          operation: UPSERT
+          identifier: terraform-provider-port-labs
+          blueprint: repository
+          properties: |-
+            {
+              "coverage_percent": "${{ steps.set-stmts-coverage.outputs.STMTS_COVERAGE }}"
+            }
