--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,6 +93,8 @@ jobs:
         test_file: ${{fromJSON(needs.acctest-build.outputs.test_files)}}
         include: ${{fromJSON(needs.acctest-build.outputs.test_files_include)}}
     steps:
+      - name: test
+        run: ls -la
       - name: Setup short name
         run: echo "SHORT_NAME=$(echo ${{ matrix.package_short }} | rev | cut -d'/' -f1 | rev)" >> $GITHUB_ENV
       - if: ${{ (env.SHORT_NAME != 'folder') && (env.SHORT_NAME != 'action') }}
