--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,6 +145,15 @@ jobs:
     needs: acctest
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - uses: actions/cache@v4
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       - uses: actions/download-artifact@v4
         with:
           pattern: 'test-results-*'
@@ -168,6 +177,7 @@ jobs:
       - name: Merge coverage reports
         run: |
           mkdir -p coverage
+          ls -la
           find coverage-artifacts -type f -name '*' -exec cp {} coverage/ \;
           echo "mode: set" > coverage/coverage.merged
           cat coverage/*.out | grep -v "mode: set" >> coverage/coverage.merged
