--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -171,6 +171,7 @@ jobs:
           go tool cover -html=coverage/coverage.merged -o coverage/coverage.html
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
+        id: upload-coverage
         with:
           path: 'coverage/coverage.html'
           name: 'coverage-html'
