Revert "Remove `max-parallel: 1` and see how it affects execution"
This reverts commit 025ce828f9ff0346d2a96ec865106975709b1fa0.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,6 +87,7 @@ jobs:
       group: acctest
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 1
       fail-fast: false
       matrix:
         test_file: ${{fromJSON(needs.acctest-build.outputs.test_files)}}
