--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,7 +116,7 @@ jobs:
           PORT_BASE_URL: ${{ secrets.PORT_BASE_URL }}
         run: |
           chmod u+x "${{matrix.test_file}}"
-          gotestsum --raw-command --rerun-fails --format testname --junitfile "./test-results/${{matrix.test_file}}.xml" \
+          gotestsum --raw-command --rerun-fails=3 --format testname --junitfile "./test-results/${{matrix.test_file}}.xml" \
             -- go tool test2json -t -p "${{matrix.package}}" "./${{matrix.test_file}}" \
             -test.v=test2json -test.timeout 10m -test.parallel 1 -test.shuffle "${{ github.run_id }}" -test.coverprofile=cover-${{ env.SHORT_NAME }}.out
 
@@ -156,6 +156,8 @@ jobs:
           comment: 'true'
           check_retries: 'true'
           flaky_summary: 'true'
+          include_time_in_summary: 'true'
+          simplified_summary: 'true'
       - name: Download all coverage reports
         uses: actions/download-artifact@v4
         with:
