--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,11 @@ jobs:
     outputs:
       test_files: ${{steps.compile-tests.outputs.test_files}}
       test_files_include: ${{steps.compile-tests.outputs.test_files_include}}
+      go-version: ${{steps.setup-go.outputs.go-version}}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
+        id: setup-go
         with:
           go-version-file: 'go.mod'
           cache: 'true'
@@ -94,7 +96,7 @@ jobs:
           terraform_wrapper: false
       - uses: actions/setup-go@v5
         with:
-          go-version-file: 'go.mod'
+          go-version: ${{needs.acctest-build.outputs.go-version}}
           cache: 'false'
       - name: Install gotestsum
         run: go install gotest.tools/gotestsum@latest
