change needs of public_cover_report from public_report to acctest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,7 +156,7 @@ jobs:
   publish_cover_report:
     name: Publish Coverage Report
     if: ${{ always() }}
-    needs: publish_report
+    needs: acctest
     runs-on: ubuntu-latest
     steps:
       - name: Download all coverage reports
