--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,6 +159,7 @@ jobs:
     needs: acctest
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Download all coverage reports
         uses: actions/download-artifact@v4
         with:
