Support changing property types of port_blueprint (#255)
* Support changing property types of port_blueprint

Added a flag that represents our current protection against changing the property type.

When the flag is set to false, we delete the property before recreating it with the new type.

* update docs

* split cover report to a different job

* Add support for changing property type of system blueprints

* change needs of public_cover_report from public_report to acctest

* add checkout step to publish_cover_report

* clean state after test

* Remove unused PatchBlueprint method

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -152,6 +152,14 @@ jobs:
           flaky_summary: 'true'
           include_time_in_summary: 'true'
           simplified_summary: 'true'
+
+  publish_cover_report:
+    name: Publish Coverage Report
+    if: ${{ always() }}
+    needs: acctest
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
       - name: Download all coverage reports
         uses: actions/download-artifact@v4
         with:
