--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,20 @@
-# linters:
-  # disable:
-  #   - errcheck
-
-run:
-  timeout: 10m
+version: "2"
+linters:
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
